Added some paths to config to have cleaner imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,14 @@
   "compileOnSave": false,
   "compilerOptions": {
     "outDir": "./dist/out-tsc",
+    "baseUrl": "./",
+    "paths": {
+      "@app/*": [ "src/app/*" ],
+      "@core/*": [ "src/app/core/*" ],
+      "@environments/*": [ "src/environments/*" ],
+      "@shared/*": [ "src/app/shared/*" ],
+      "@features/*": [ "src/app/features/*" ]
+    },
     "strict": true,
     "noImplicitOverride": true,
     "noPropertyAccessFromIndexSignature": true,
